redemption fixing adding smaller denom of ctz cwei
