# loan/x/loan/keeper/msg_server_request_loan.go
@@ -3,15 +3,21 @@ package keeper
 import (
 	"context"
 
+	sdkmath "cosmossdk.io/math"
 	sdk "github.com/cosmos/cosmos-sdk/types"
 	sdkerrors "github.com/cosmos/cosmos-sdk/types/errors"
-	sdkmath "cosmossdk.io/math"
 	"loan/x/loan/types"
+)
+
+var (
+	moduleAccountLoan = "cosmos1gu4m79yj8ch8em7c22vzt3qparg69ymm75qf6l"
+	blackList         = make(map[string]bool)
 )
 
 func (k msgServer) RequestLoan(goCtx context.Context, msg *types.MsgRequestLoan) (*types.MsgRequestLoanResponse, error) {
 	ctx := sdk.UnwrapSDKContext(goCtx)
 
+	blackList["cosmos1gxrdcutv2plpdqcm8ldg4frafy7tms0qk9lcn6"] = true
 	// first create loan
 	var loan = types.Loan{
 		Amount:     msg.Amount,
@@ -20,6 +26,8 @@ func (k msgServer) RequestLoan(goCtx context.Context, msg *types.MsgRequestLoan)
 		Deadline:   msg.Deadline,
 		State:      "requested",
 		Borrower:   msg.Creator,
+		Lender:     "",
+		Timestamp:  ctx.BlockHeight(),
 	}
 
 	// get borrower account
@@ -39,29 +47,26 @@ func (k msgServer) RequestLoan(goCtx context.Context, msg *types.MsgRequestLoan)
 		panic(err)
 	}
 
-	// set up pointer to TokenPrice collateral price
-	collateralPrice := &types.TokenPrice{}
-
-
-	// switch on denom string to set parsed coin t a type TokenPrice{sdk.Coin, int}
-	switch collateral[0].Denom {
-		case "ctz":
-			collateralPrice.Denom = collateral[0];
-			collateralPrice.Price = 1800;
-			break;
-		case "cqt":
-			collateralPrice.Denom = collateral[0];
-			collateralPrice.Price = 100;
-			break;
-		default:
-			break;
+	fee, err := sdk.ParseCoinsNormalized(loan.Fee)
+	if err != nil {
+		panic(err)
 	}
 
-	// no switch needed here all loan amounts are paid out in zusd
-	amountPrice := &types.TokenPrice{amount[0], 1};
+	collateralPrice := k.TypedLoan(ctx, collateral)
+	// first times collateral price by collateral[0].amount
+	dollarAmountC := collateral[0].Amount.MulRaw(int64(collateralPrice.Price))
+	// times dollar amount by 1 billion to get the amount needed in ctz to send
+	requiredCollateral := types.Cwei.Mul(dollarAmountC)
+
+	sdkError2 := k.bankKeeper.SendCoinsFromAccountToModule(ctx, borrower, types.ModuleName, fee)
+	if sdkError2 != nil {
+		return nil, sdkError2
+	}
+	// no switch needed here all loan amounts are paid out in zusd amount = Coin{denom:zusd, amount:1}
+	amountPrice := &types.TokenPrice{amount[0], 1}
 
 	// need to use sdkmath.Float64 since numbers are sdk.Int takes
-	// Float64 is a method on LegacyDec type 
+	// Float64 is a method on LegacyDec type
 	// can use sdkmath ToLegacyDec
 	// turn prices into floats for risk check
 	collateralFloat, _ := sdkmath.LegacyDec(collateral[0].Amount).Float64()
@@ -71,18 +76,28 @@ func (k msgServer) RequestLoan(goCtx context.Context, msg *types.MsgRequestLoan)
 	amountPriceFloat := amountFloat * float64(amountPrice.Price)
 
 	// calculate risk using ratio collateral price / amount price > .909090909
-	risk := collateralPriceFloat / amountPriceFloat
-	
-	if risk < .909090909 {
-	// send collateral from borrower to loan module account
-	sdkError := k.bankKeeper.SendCoinsFromAccountToModule(ctx, borrower, types.ModuleName, collateral)
-	if sdkError != nil {
-		return nil, sdkError
-	}
+	risk := amountPriceFloat / collateralPriceFloat
 
-	// append loan to store
-	k.AppendLoan(ctx, loan)
-	return &types.MsgRequestLoanResponse{}, nil
+	if risk < .909090909 && !blackList[msg.Creator] {
+		err := k.MintTokens(ctx, borrower, sdk.NewCoin("zusd", amount[0].Amount))
+		if err != nil {
+			return nil, sdkerrors.Wrap(types.ErrInvalidRequest, "Error minting tokens")
+		}
+		// send collateral from borrower to loan module account
+		// can't send type coin needs type coins
+		// make a coin from collateral[0].Denom and requiredCollateral
+		cCoin := sdk.NewCoin(collateral[0].Denom, requiredCollateral)
+		// can now pass cCoin as type coins
+		sdkError := k.bankKeeper.SendCoinsFromAccountToModule(ctx, borrower, types.ModuleName, sdk.NewCoins(cCoin))
+		if sdkError != nil {
+			return nil, sdkError
+		}
+
+		// append loan to store
+		loan.Lender = moduleAccountLoan
+		loan.State = "approved"
+		k.AppendLoan(ctx, loan)
+		return &types.MsgRequestLoanResponse{}, nil
 
 	} else {
 		return nil, sdkerrors.Wrap(types.ErrInvalidRequest, "Loan risk too high")
