# loan/x/loan/types/loan.pb.go
@@ -31,6 +31,7 @@ type Loan struct {
 	State      string `protobuf:"bytes,6,opt,name=state,proto3" json:"state,omitempty"`
 	Borrower   string `protobuf:"bytes,7,opt,name=borrower,proto3" json:"borrower,omitempty"`
 	Lender     string `protobuf:"bytes,8,opt,name=lender,proto3" json:"lender,omitempty"`
+	Timestamp  int64  `protobuf:"varint,9,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 }
 
 func (m *Loan) Reset()         { *m = Loan{} }
@@ -122,6 +123,13 @@ func (m *Loan) GetLender() string {
 	return ""
 }
 
+func (m *Loan) GetTimestamp() int64 {
+	if m != nil {
+		return m.Timestamp
+	}
+	return 0
+}
+
 func init() {
 	proto.RegisterType((*Loan)(nil), "loan.loan.Loan")
 }
@@ -129,22 +137,23 @@ func init() {
 func init() { proto.RegisterFile("loan/loan/loan.proto", fileDescriptor_c51a16ffe2d36ee8) }
 
 var fileDescriptor_c51a16ffe2d36ee8 = []byte{
-	// 228 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x12, 0xc9, 0xc9, 0x4f, 0xcc,
-	0xd3, 0x87, 0x13, 0x7a, 0x05, 0x45, 0xf9, 0x25, 0xf9, 0x42, 0x9c, 0x60, 0x36, 0x88, 0x50, 0x3a,
-	0xc6, 0xc8, 0xc5, 0xe2, 0x93, 0x9f, 0x98, 0x27, 0xc4, 0xc7, 0xc5, 0x94, 0x99, 0x22, 0xc1, 0xa8,
-	0xc0, 0xa8, 0xc1, 0x12, 0xc4, 0x94, 0x99, 0x22, 0x24, 0xc6, 0xc5, 0x96, 0x98, 0x9b, 0x5f, 0x9a,
-	0x57, 0x22, 0xc1, 0xa4, 0xc0, 0xa8, 0xc1, 0x19, 0x04, 0xe5, 0x09, 0x09, 0x70, 0x31, 0xa7, 0xa5,
-	0xa6, 0x4a, 0x30, 0x83, 0x05, 0x41, 0x4c, 0x21, 0x39, 0x2e, 0xae, 0xe4, 0xfc, 0x9c, 0x9c, 0xc4,
-	0x92, 0xd4, 0xa2, 0xc4, 0x1c, 0x09, 0x16, 0xb0, 0x04, 0x92, 0x88, 0x90, 0x14, 0x17, 0x47, 0x4a,
-	0x6a, 0x62, 0x4a, 0x4e, 0x66, 0x5e, 0xaa, 0x04, 0x2b, 0x58, 0x16, 0xce, 0x17, 0x12, 0xe1, 0x62,
-	0x2d, 0x2e, 0x49, 0x2c, 0x49, 0x95, 0x60, 0x03, 0x4b, 0x40, 0x38, 0x20, 0x1d, 0x49, 0xf9, 0x45,
-	0x45, 0xf9, 0xe5, 0xa9, 0x45, 0x12, 0xec, 0x10, 0x1d, 0x30, 0x3e, 0xc8, 0x5d, 0x39, 0xa9, 0x79,
-	0x29, 0xa9, 0x45, 0x12, 0x1c, 0x10, 0x77, 0x41, 0x78, 0x4e, 0xda, 0x27, 0x1e, 0xc9, 0x31, 0x5e,
-	0x78, 0x24, 0xc7, 0xf8, 0xe0, 0x91, 0x1c, 0xe3, 0x84, 0xc7, 0x72, 0x0c, 0x17, 0x1e, 0xcb, 0x31,
-	0xdc, 0x78, 0x2c, 0xc7, 0x10, 0x25, 0x08, 0xf6, 0x7e, 0x05, 0x24, 0x14, 0x4a, 0x2a, 0x0b, 0x52,
-	0x8b, 0x93, 0xd8, 0xc0, 0xe1, 0x60, 0x0c, 0x08, 0x00, 0x00, 0xff, 0xff, 0x45, 0xfb, 0xaa, 0x0d,
-	0x1f, 0x01, 0x00, 0x00,
+	// 244 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x4c, 0x90, 0x41, 0x4b, 0xc4, 0x30,
+	0x10, 0x85, 0x9b, 0xb6, 0x5b, 0xb7, 0x73, 0x10, 0x0d, 0x8b, 0x0c, 0x22, 0xa1, 0x78, 0x2a, 0x08,
+	0x7a, 0xf0, 0x1f, 0x78, 0xf6, 0xd4, 0xa3, 0xb7, 0xac, 0x19, 0xa1, 0x90, 0x26, 0x25, 0x8d, 0xa8,
+	0xff, 0xc2, 0x9f, 0xe5, 0x71, 0x8f, 0x1e, 0xa5, 0xf5, 0x87, 0x48, 0x12, 0x5d, 0xf7, 0x32, 0xcc,
+	0xf7, 0x1e, 0x0f, 0x1e, 0x0f, 0x36, 0xda, 0x4a, 0x73, 0xb3, 0x3f, 0xd7, 0xa3, 0xb3, 0xde, 0xf2,
+	0x3a, 0xfe, 0xe1, 0x5c, 0x7e, 0x33, 0x28, 0xef, 0xad, 0x34, 0xfc, 0x18, 0xf2, 0x5e, 0x21, 0x6b,
+	0x58, 0x5b, 0x76, 0x79, 0xaf, 0xf8, 0x19, 0x54, 0x72, 0xb0, 0xcf, 0xc6, 0x63, 0xde, 0xb0, 0xb6,
+	0xee, 0x7e, 0x89, 0x9f, 0x40, 0xf1, 0x44, 0x84, 0x45, 0x14, 0xc3, 0xcb, 0x05, 0xc0, 0xa3, 0xd5,
+	0x5a, 0x7a, 0x72, 0x52, 0x63, 0x19, 0x8d, 0x03, 0x85, 0x9f, 0xc3, 0x5a, 0x91, 0x54, 0xba, 0x37,
+	0x84, 0xab, 0xe8, 0xee, 0x99, 0x6f, 0x60, 0x35, 0x79, 0xe9, 0x09, 0xab, 0x68, 0x24, 0x08, 0x89,
+	0xad, 0x75, 0xce, 0xbe, 0x90, 0xc3, 0xa3, 0x94, 0xf8, 0xe3, 0xd0, 0x4b, 0x93, 0x51, 0xe4, 0x70,
+	0x9d, 0x7a, 0x25, 0xe2, 0x17, 0x50, 0xfb, 0x7e, 0xa0, 0xc9, 0xcb, 0x61, 0xc4, 0xba, 0x61, 0x6d,
+	0xd1, 0xfd, 0x0b, 0x77, 0x57, 0x1f, 0xb3, 0x60, 0xbb, 0x59, 0xb0, 0xaf, 0x59, 0xb0, 0xf7, 0x45,
+	0x64, 0xbb, 0x45, 0x64, 0x9f, 0x8b, 0xc8, 0x1e, 0x4e, 0xe3, 0x38, 0xaf, 0x69, 0x23, 0xff, 0x36,
+	0xd2, 0xb4, 0xad, 0xe2, 0x4a, 0xb7, 0x3f, 0x01, 0x00, 0x00, 0xff, 0xff, 0x9b, 0x45, 0x1f, 0x66,
+	0x3d, 0x01, 0x00, 0x00,
 }
 
 func (m *Loan) Marshal() (dAtA []byte, err error) {
@@ -167,6 +176,11 @@ func (m *Loan) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.Timestamp != 0 {
+		i = encodeVarintLoan(dAtA, i, uint64(m.Timestamp))
+		i--
+		dAtA[i] = 0x48
+	}
 	if len(m.Lender) > 0 {
 		i -= len(m.Lender)
 		copy(dAtA[i:], m.Lender)
@@ -271,6 +285,9 @@ func (m *Loan) Size() (n int) {
 	l = len(m.Lender)
 	if l > 0 {
 		n += 1 + l + sovLoan(uint64(l))
+	}
+	if m.Timestamp != 0 {
+		n += 1 + sovLoan(uint64(m.Timestamp))
 	}
 	return n
 }
@@ -553,6 +570,25 @@ func (m *Loan) Unmarshal(dAtA []byte) error {
 			}
 			m.Lender = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
+		case 9:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Timestamp", wireType)
+			}
+			m.Timestamp = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowLoan
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.Timestamp |= int64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipLoan(dAtA[iNdEx:])
